--- a/index.html
+++ b/index.html
@@ -1,38 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport"
-	content="width=device-width,
-	initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible"
-	content="ie=edge">
-	<link href="style.css" rel="stylesheet">
-	<link href="index.css" rel="stylesheet">
-	<title>conduongdisan</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="style.css">
+	<title>Conduongdisan</title>
 </head>
-<body class="container full-height-grow">
-<header class="main-header">
-		<a href="/" class="brand-logo">
-			<div class="brand-logo-name">CON ĐƯỜNG<br>
-DI SẢN</div>
-		</a>
-		<nav class="main-nav">
-			<ul>
-				<li><a href="conduongdisan.html">Trang chủ</a></li>
-				<li><a href="gioithieu.html">Giới thiệu</a></li>
-				<li><a href="camnang.html">Cẩm nang</a></li>
-				<li><a href="lienhe.html">Liên hệ</a></li>
-			</ul>
-		</nav>
-	</header>
-<section class="home-main-section">
+<body>
+	<nav>
+		<div class="logo">
+			<h4>con đường<br>di sản</h4>			
+		</div>
+		<ul class="nav-links">
+			<li><a href="index.html">Trang chủ</a></li>
+			<li><a href="gioithieu.html">Giới thiệu</a></li>
+			<li><a href="camnang.html">Cẩm nang</a></li>
+			<li><a href="lienhe.html">Liên hệ</a></li>
+		</ul>
+	</nav>
+	<section class="home-main-section">
 		<div class="main-text">
 		  <h1 class="title">Cẩm nang</h1>
-			<h2 class="bigger-title">NÉT ĐẸP<br>
-XỨ TRẦM HƯƠNG</h2>
-			<a href="camnang.html" class="btn">Tìm hiểu ngay</a>
+		  <h2 class="bigger-title">NÉT ĐẸP<br>XỨ TRẦM HƯƠNG</h2>
+		  <a href="gioithieu.html" class="btn">Tìm hiểu ngay</a>
 		</div>
-</section>
+	</section>
 </body>
 </html>
