--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="style.css">
-	<title>Conduongdisan</title>
+	<title>Cẩm nang di tích</title>
 </head>
 <body>
 	<nav>
@@ -16,6 +16,7 @@
 			<li><a href="index.html">Trang chủ</a></li>
 			<li><a href="gioithieu.html">Giới thiệu</a></li>
 			<li><a href="camnang.html">Cẩm nang</a></li>
+			<li><a href="phuongphap.html">Dạy học</a></li>
 			<li><a href="lienhe.html">Liên hệ</a></li>
 		</ul>
 	</nav>
