--- a/gioithieu.html
+++ b/gioithieu.html
@@ -22,7 +22,7 @@
 		</ul>
 	</nav>
 	<div>
-		<div class="tieude1">cẩm nang di tích<br>là gì</div>
+		<div class="tieude1">cẩm nang di tích là gì</div>
 		<div class="noidung1">Cẩm nang Nét đẹp xứ Trầm Hương là nơi cung cấp cho bạn tất tần tật A-Z những thông tin, vị trí của các di tích lịch sử, di sản văn hóa tại Nha Trang-Khánh Hòa, với mong muốn cung cấp một trải nghiệm du lịch trọn vẹn nhất, mới lạ và đậm đà bản sắc văn hóa nhất.</div>
 	</div>
 </body>
